# meow-say

./: Cargo.toml
meow-say/: Cargo.toml
meow-say/src/: draw.rs  img.rs  lib.rs
telegram-bot/lib/: Cargo.toml
telegram-bot/raw/src/requests/: mod.rs  send_sticker.rs  upload_sticker_file.rs
