[package]
name = "meow_say"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
futures = "0.3"
image = "0.24"
imageproc = "0.23"
lazy_static = "1.4"
log = "0.4"
rusttype = "0.9"
clap = { version="4.4", features=["derive"] }
telegram-bot = { path="../telegram-bot/lib" }
tokio = { version="1.2", features=["macros", "rt-multi-thread"] }
